# ml-orchestration

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ml_orchestration/: constants.py  data_prep.py  eval.py  model.py  start_flow.py  train.py
