[tool.poetry]
name = "ml-orchestration"
version = "0.1.0"
description = ""
authors = ["sam99dave <sam99dave@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.2"
librosa = "^0.10.1"
soundfile = "^0.12.1"
numpy = "^1.26.2"
pyaudio = "^0.2.14"
tqdm = "^4.66.1"
prefect = "^2.14.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
